# warmzap

./: .gitignore  app.py  evan.py  logado.py  logar.py  mensagens.csv  pyproject.toml  readme.md  testee.py
warmzap/: manage.py
warmzap/accounts/: admin.py  backends.py  managers.py  models.py  urls.py  views.py
warmzap/accounts/templates/: signin.html  signup.html
warmzap/accounts/templates/components/: accounts_base_page.html
warmzap/apps/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  validators.py  views.py
warmzap/apps/accounts/migrations/: 0001_initial.py  0002_user_cellphone_user_instagram_user_name_user_surname.py  0003_alter_user_cellphone_alter_user_email_and_more.py  0004_alter_user_name_alter_user_surname.py  0005_user_cpf.py  0006_alter_user_instagram.py  0007_user_asaas_customer_id_user_asaas_subscription_id_and_more.py  0008_remove_user_asaas_customer_id_and_more.py
warmzap/apps/accounts/templates/: signin.html  signup.html
warmzap/apps/accounts/templatetags/: utils.py
warmzap/apps/chip_heater/: admin.py  apps.py  consumers.py  forms.py  htmx_views.py  models.py  routing.py  tasks.py  urls.py  views.py  whatsapp_web.py
warmzap/apps/chip_heater/migrations/: 0001_initial.py  0002_alter_chip_number.py  0003_chip_directory_token_alter_chip_number.py  0004_alter_chip_number.py  0005_chip_stage.py  0006_remove_chip_directory_token_chip_browser_profile.py  0007_message_alter_chip_browser_profile.py  0008_chip_days_to_heat_chip_heated_days.py  0009_alter_chip_days_to_heat.py
warmzap/apps/chip_heater/templates/: dashboard.html  login_qrcode.html  my_chips.html
warmzap/apps/chip_heater/templates/components/: banned_card.html  completed_card.html  in_heating_card.html  not_started_card.html
warmzap/apps/chip_heater/templates/components/dashboard/: banned_card.html  completed_card.html  in_heating_card.html  not_started_card.html  phone_infos.html
warmzap/apps/chip_heater/templates/components/form/: add_chip.html
warmzap/apps/chip_heater/templates/components/my_chips/: completed_card.html  in_heating_card.html  not_started_card.html
warmzap/apps/chip_heater/templates/components/svg/: cellphone.html  copy.html  eye.html
warmzap/apps/payments/: asaas.py  subscription_plans.py  urls.py  views.py
warmzap/apps/payments/templates/: subscription_plans.html
warmzap/apps/phone_heater/: apps.py  urls.py  views.py
warmzap/apps/phone_heater/templates/: dashboard.html
warmzap/apps/settings/: forms.py  urls.py  views.py
warmzap/apps/settings/templates/: profile_settings.html
warmzap/core/: asgi.py  celery.py  context_processors.py  env_settings.py  settings.py  urls.py  wsgi.py
warmzap/templates/: base.html  base_authenticated.html
warmzap/templates/components/: form.html  form_field.html  messages.html  sidebar.html  top_bar.html
warmzap/templates/static/general/css/: sidebar.css  style.css
warmzap/templates/static/general/js/: sidebar.js
